Yet another alignment tweak commit  - fixed emergency alert so it is inside standard width constraints  - Re-corrected (again) the search icon in the secondary widget area  - Sorted out critical style generation so it doesnt flicker so badly when white header is in play.

--- a/style-gutenburg.css
+++ b/style-gutenburg.css
@@ -13550,7 +13550,7 @@
 .edit-post-visual-editor #secondary .nhsuk-header__search-wrap .nhsuk-search__submit, .block-editor-block-styles #secondary .nhsuk-header__search-wrap .nhsuk-search__submit, .block-editor-inserter__menu-help-panel #secondary .nhsuk-header__search-wrap .nhsuk-search__submit {
   border: 2px solid #aeb7bd;
   border-left: none;
-  /*box-shadow: 0;*/
+  margin-top: 0;
   float: left;
   box-shadow: 0 !important;
 }
